rust-ecosystem/tailwindcss-node/tests/snapshots/report_snapshots_cover_hits_and_timers.snap
---
source: rust-ecosystem/tailwindcss-node/tests/instrumentation.rs
input_file: crates/testing_helpers/src/lib.rs
---
hits:

Hits:
  Potato × 3

nested:

[TIME] Foo
[TIME]   ↳ Bar

repeated:

[TIME] Foo
[TIME]   ↳ Inner × 5

mixed:

Hits:
  cache_miss × 2

Timers:
[TIME] Resolve
