rust-ecosystem/tailwindcss-node/tests/snapshots/resolves_fixture_matrix.snap
---
source: rust-ecosystem/tailwindcss-node/tests/resolve.rs
input_file: crates/testing_helpers/src/lib.rs
---
relative css: tests/fixtures/resolve/rel_css/./styles.css
relative css no ext: tests/fixtures/resolve/no_ext_css/./styles.css
relative js: tests/fixtures/resolve/rel_js/./mod.js
relative js no ext: tests/fixtures/resolve/no_ext_js/./mod.ts
index js: tests/fixtures/resolve/index_js/./utils/index.js
custom css: tests/fixtures/resolve/custom/custom.css
