rust-ecosystem/tailwindcss-node/tests/snapshots/upstream_auto_end_pending_timers_case.snap
---
source: rust-ecosystem/tailwindcss-node/tests/instrumentation.rs
input_file: crates/testing_helpers/src/lib.rs
---
[TIME] Foo
[TIME]   ↳ Bar × 100
[TIME]   ↳ Baz
